# Multimode-Robot-Behaviour

./: .gitignore  CONTRIBUTING.md  MANIFEST.in  PROJECT_STRUCTURE.md  README.md  UPLOAD_INSTRUCTIONS.py  pyproject.toml  student_simple_example.py  test_connection.py  test_environment.py  test_final_package.py  test_real_robot.py  test_real_robot_connection.py  unified_robot.py
Robot-behavior/: .gitignore  LICENSE  MANIFEST.in  PROJECT_STRUCTURE.md  README.md  debug_simple.py  pyproject.toml  requirements.txt  test_speed_sync.py
Robot-behavior/.git_inner_backup/: COMMIT_EDITMSG  FETCH_HEAD  ORIG_HEAD  config  index
Robot-behavior/.git_inner_backup/logs/: HEAD
Robot-behavior/.git_inner_backup/logs/refs/heads/: main
Robot-behavior/.git_inner_backup/logs/refs/remotes/origin/: main  master
Robot-behavior/.git_inner_backup/refs/remotes/origin/: main  master
Robot-behavior/docs/: MINIMAL_API_GUIDE.md
Robot-behavior/examples/: README.md  minimal_api_examples.py  real_mode_mock_demo.py  real_robot_demo.py  simulator_demo.py  speed_demo.py  student_template.py  test_speeds.py  testing.py
Robot-behavior/robot_behavior/: controllers.py  minimal_api.py  minimal_init.py
Robot-behavior/robot_behavior/simulator/: minimal_simulator.py
Robot-behavior/scripts/: build_package.py  dev_check_import.py  dev_enable_local_import.py  project_status.py  restore_working.py
Robot-behavior/tests/: README.md  conftest.py  test_robot_behavior.py
docs/: README.md  SYSTEM_GUIDE.md
go1-py-main/: Makefile  pyproject.toml
go1-py-main/src/go1_py/: __init__.py  __main__.py  test.py
go1-py-main/src/go1_py/parsers/: __init__.py  bms.py  robot.py
go1-py-main/src/go1_py/state/: mode.py  robot.py
src/myrobot/: __init__.py  api.py  controllers.py
src/myrobot/core/: robot.py
src/myrobot/hardware/: __init__.py
src/myrobot/simulator/: __init__.py  enhanced_simulator.py  program.py  visual.py
src/unified_robot_control/: __init__.py  core.py
src/unified_robot_control/examples/: student_examples.py  student_template.py
src/unified_robot_control/simulator/: __init__.py  controllers.py  minimal_api.py
src/unified_robot_control/simulator/assets/: README.md
src/unified_robot_control/simulator/core/: robot.py
src/unified_robot_control/simulator/simulator/: enhanced_simulator.py
tests/: test_mock_real.py  test_simulator_basic.py
unified_robot_control_saisurya-1.0.2/: PKG-INFO  PUBLISHING_GUIDE.md  README.md  pyproject.toml
unified_robot_control_saisurya-1.0.2/src/unified_robot_control/: __init__.py  core.py
unified_robot_control_saisurya-1.0.2/src/unified_robot_control.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
unified_robot_control_saisurya-1.0.2/src/unified_robot_control/examples/: student_examples.py  student_template.py
unified_robot_control_saisurya-1.0.2/src/unified_robot_control/go1_py/: dog.py
unified_robot_control_saisurya-1.0.2/src/unified_robot_control/go1_py/state/: __init__.py  bms.py
unified_robot_control_saisurya-1.0.2/src/unified_robot_control/robot_hardware/: __init__.py  go1_interface.py
unified_robot_control_saisurya-1.0.2/src/unified_robot_control/simulator/: __init__.py  controllers.py  minimal_api.py  minimal_api_backup.py  minimal_init.py
unified_robot_control_saisurya-1.0.2/src/unified_robot_control/simulator/core/: robot.py
unified_robot_control_saisurya-1.0.2/src/unified_robot_control/simulator/simulator/: __init__.py  enhanced_simulator.py  minimal_simulator.py
unified_robot_control_saisurya-1.0.2/src/unified_robot_control_saisurya.egg-info/: PKG-INFO  SOURCES.txt
unified_robot_control_saisurya-1.0.2/tests/: testing1.py
